--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: {{ .Release.Name }}-app
 spec:
-  type: LoadBalancer
+  type: {{ .Values.service.type | default "ClusterIP" }}
   ports:
     - port: 80
       targetPort: 8000 # Adjust to the containerPort defined in deployment.yaml
